--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <!-- Header section start -->
     <header>
+        <h2>Hello</h2>
         <h1>Website Title</h1>
         <p>Your website slogan goes here</p>
     </header>
